refactor: Katalog-Controls visuell vereinheitlichen
Co-Authored-By: OpenAI Codex <codex@openai.com>